--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;900&family=Source+Sans+Pro
     :wght@300;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
 
 <body>
@@ -73,18 +73,18 @@
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
         <p class="section__subtitle section__subtitle--about">
-           Developer based out of Stockholm
+            Developer based out of Stockholm
         </p>
 
         <div class="about-me__body">
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type specimen 
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen
                 book.
             </p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type specimen 
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen
                 book.</p>
         </div>
         <img src="images/pandaLogo.png" alt="" class="about-me__img">
@@ -127,12 +127,24 @@
     </section>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
         <a href="mailto:haldevone@gmail.com" class="footer__link">haldevone@gmail.com</a>
         <ul class="social-list">
-            <li class="social-list__item"><a class="social-list__link" href=""></a>a</li>
-            <li class="social-list__item"><a class="social-list__link" href=""></a>b</li>
-            <li class="social-list__item"><a class="social-list__link" href=""></a>c</li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="">
+                    <i class="fas fa-envelope footer__link"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="">
+                    <i class="fab fa-instagram footer__link"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="">
+                    <i class="fab fa-github footer__link"></i>
+                </a>
+            </li>
         </ul>
     </footer>
 
