--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Enon Hall</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">Web & Game Dev</p>
         <img src="images/pandaLogo.png" alt="picture of Enon" class="intro__img">
     </section>
 
@@ -45,22 +45,26 @@
         <h2 class="section__title section__title--skills">What I do</h2>
         <div class="skills">
             <div class="skill">
-                <h3>Front End Development</h3>
-                <p>Html, Css</p>
+                <img src="images/mobile2.png" alt="" class="skill-img">
+                <h3 class="skill-header">Front End Development</h3>
+                <p>Html, Css, Github, Javascript</p>
             </div>
             <!--/ skill -->
             <div class="skill">
-                <h3>Back End Development</h3>
-                <p>PHP, MySQL, Git</p>
+                <img src="images/cogwheel.png" alt="" class="skill-img">
+                <h3 class="skill-header">Back End Development</h3>
+                <p>PHP, MySQL</p>
             </div>
             <!--/ skill -->
             <div class="skill">
-                <h3>Design</h3>
-                <p>Photoshop, Blender</p>
+                <img src="images/brush.png" alt="" class="skill-img">
+                <h3 class="skill-header">Design</h3>
+                <p>Photoshop, Blender, 3d Coat</p>
             </div>
             <div class="skill">
-                <h3>Coding</h3>
-                <p>Javascript, C#</p>
+                <img src="images/gameController2.png" alt="" class="skill-img">
+                <h3 class="skill-header">Game Development</h3>
+                <p>Unity, C#</p>
             </div>
             <!--/ skill -->
         </div>
@@ -99,13 +103,15 @@
         <div class="portfolio">
 
             <!-- Portfolio Item 01 -->
-            <a href="#" class="portfolio__item">
-                <img src="images/pandaLogo.png" alt="" class="portfolio__img">
+            <a href="http://haldevone.com/" class="portfolio__item">
+                <p class="portfolio__item--info">My Company Blog Site</p>
+                <img src="images/project1.png" alt="" class="portfolio__img"> 
             </a>
 
-            <!-- Portfolio Item 01 -->
-            <a href="#" class="portfolio__item">
-                <img src="images/pandaLogo.png" alt="" class="portfolio__img">
+            <!-- Portfolio Item 02 -->
+            <a href="https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714" class="portfolio__item">
+                <p class="portfolio__item--info">Mobile App Game</p>
+                <img src="images/project2.png" alt="" class="portfolio__img">
             </a>
 
             <!-- Portfolio Item 01 -->
@@ -147,7 +153,7 @@
             </li>
         </ul>
     </footer>
-
+<script src="js/index.js"></script>
 </body>
 
 </html>
