--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
             </ul>
         </nav>
     </header>
@@ -87,9 +87,9 @@
                 <!--/ skill -->
             </div>
         </div>
-        <div class="work-btn">
+        <!-- <div class="work-btn">
             <a href="#work" class="btn">My Work</a>
-        </div>
+        </div> -->
 
     </section>
 
@@ -97,7 +97,6 @@
     <section class="my-work" id="work">
         <h2 class="section__title section__title--work">My Work</h2>
         <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
-
         <div class="cards">
 
             <!-- Card Item 01 -->
@@ -105,90 +104,122 @@
                 <div>
                     <img src="images/project1.png" alt="" class="card-item-img"> 
                 </div>
-                
                 <figcaption>
-                    <h3 class="card-item-header">My Company Blog Site</h3>
-                    <p class="card-item-info"> React CSS JS HTML</p>
-                    <button class="work-btn" onclick="window.location.href='http://haldevone.com/'">More Info</button>
+                    <h3 class="card-item-header">CMS Blog Site</h3>
+                    <div class="card-item-info">
+                        <h4>HalDevOne homepage</h4>
+                        <p>Tech: HTML, CSS, JS, PHP, MySQL</p>
+                        <button class="btn" onclick="window.location.href='http://haldevone.com/'">
+                            Visit
+                        </button>
+                    </div>
                 </figcaption>
             </figure>
 
             <!-- Card Item 02 -->
             <figure class="card-item">
-                <a href="http://haldevone.com/" class="card-item-link">
-                    <img src="images/project2.png" alt="" class="card-item-img"> 
-                </a>
+                <div>
+                    <img src="images/project5.png" alt="" class="card-item-img">
+                </div>
+                <figcaption>
+                    <h3 class="card-item-header">Transaction App</h3>
+                    <div class="card-item-info">
+                        <h4>Transaction app with user login and backend firebase</h4>
+                        <p>Tech: React, CSS, D3, Firebase</p>
+                        <!-- <button class="btn"  onclick="window.location.href='https://vedumstandvard.netlify.app/'">
+                            Visit
+                        </button> -->
+                    </div>
+                </figcaption>
+            </figure>
+
+            <!-- Card Item 03 -->
+            <figure class="card-item">
+                <div>
+                    <img src="images/project2.png" alt="" class="card-item-img">
+                </div>
                 <figcaption>
                     <h3 class="card-item-header">Mobile App Game</h3>
-                    <p class="card-item-info"></p>
-                    <button class="work-btn">More Info</button>
+                    <div class="card-item-info">
+                        <h4>Mobile game for children. Available at Google Play & App store</h4>
+                        <p>Tech: C#, Unity</p>
+                        <button class="btn"  onclick="window.location.href='https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714'">
+                            App store
+                        </button>
+                    </div>
                 </figcaption>
             </figure>
 
-            <!-- Card Item 03 -->
-            <figure class="card-item">
-                <a href="https://thehangmanreact.netlify.app/" class="card-item-link">
-                    <img src="images/pandaLogo.png" alt="" class="card-item-img"> 
-                </a>
-                <figcaption>
-                    <h3 class="card-item-header">Hangman Game</h3>
-                    <p class="card-item-info"></p>
-                    <button class="work-btn">More Info</button>
-                </figcaption>
-            </figure>
-            <!-- Card Item 03 -->
-
-            <figure class="card-item">
-                <a href="https://vedumstandvard.netlify.app/" class="card-item-link">
-                    <img src="images/pandaLogo.png" alt="" class="card-item-img"> 
-                </a>
+             <!-- Card Item 04 -->
+             <figure class="card-item">
+                <div>
+                    <img src="images/project4.png" alt="" class="card-item-img">
+                </div>
                 <figcaption>
                     <h3 class="card-item-header">Client Dentist site</h3>
-                    <p class="card-item-info"></p>
-                    <button class="work-btn">More Info</button>
+                    <div class="card-item-info">
+                        <h4>Dentist Homepage with Next js</h4>
+                        <p>Tech: Next, CSS</p>
+                        <button class="btn"  onclick="window.location.href='https://vedumstandvard.netlify.app/'">
+                            Visit
+                        </button>
+                    </div>
                 </figcaption>
             </figure>
+
+            <!-- Card Item 05 -->
+            <figure class="card-item">
+                <div>
+                    <img src="images/project3.png" alt="" class="card-item-img">
+                </div>
+                <figcaption>
+                    <h3 class="card-item-header">Web Game</h3>
+                    <div class="card-item-info">
+                        <h4>Hangman with Star Wars API from swapi.dev</h4>
+                        <p>Tech: React, Redux, CSS</p>
+                        <button class="btn"  onclick="window.location.href='https://thehangmanreact.netlify.app/'">
+                            Visit
+                        </button>
+                    </div>
+                </figcaption>
+            </figure>
+
         </div>
     </section>
 
     <!-- About Me -->
     <section class="about-me" id="about">
-        <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">
-            Developer based out of Stockholm
-        </p>
-
-        <div class="about-me__body">
-            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                book.
+        <div class="about-me-container">
+            <h2 class="section__title section__title--about">Who I am</h2>
+            <h3 class="section__subtitle section__subtitle--about">
+                Developer based out of Stockholm
+            </h3>
+            <p>
+                I’ve always been a person who has both a logical and a creative side and therefore choosing 
+                Web/Game development was a perfect match for me. I am self-taught and my passion for this 
+                industry has made it easy for me to study and learn and I always strive for updating my knowledge.
             </p>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type specimen
-                book.</p>
+            
         </div>
-        <img src="images/pandaLogo.png" alt="" class="about-me__img">
+        <img src="images/profileCartoonFront.png" alt="" class="about-me-img">
 
     </section>
 
     <!-- Footer -->
     <footer class="footer">
-        <a href="mailto:haldevone@gmail.com" class="footer__link">haldevone@gmail.com</a>
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="">
+                <a class="social-list__link" href="mailto:enon.halilovic@gmail.com">
                     <i class="fas fa-envelope footer__link"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="">
+                <a class="social-list__link" href="https://www.instagram.com/haldevone/">
                     <i class="fab fa-instagram footer__link"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="">
+                <a class="social-list__link" href="https://github.com/haldevone">
                     <i class="fab fa-github footer__link"></i>
                 </a>
             </li>
