link open new tab

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                     <div class="card-item-info">
                         <h4>HalDevOne homepage</h4>
                         <p>Tech: HTML, CSS, JS, PHP, MySQL</p>
-                        <button class="btn" onclick="window.location.href='http://haldevone.com/'">
+                        <button class="btn" onclick="window.open('http://haldevone.com','_blank', 'noopener noreferrer')">
                             Visit
-                        </button>
+                        </button>                        
                     </div>
                 </figcaption>
             </figure>
@@ -126,9 +126,6 @@
                     <div class="card-item-info">
                         <h4>Transaction app with user login and backend firebase</h4>
                         <p>Tech: React, CSS, D3, Firebase</p>
-                        <!-- <button class="btn"  onclick="window.location.href='https://vedumstandvard.netlify.app/'">
-                            Visit
-                        </button> -->
                     </div>
                 </figcaption>
             </figure>
@@ -143,7 +140,7 @@
                     <div class="card-item-info">
                         <h4>Mobile game for children. Available at Google Play & App store</h4>
                         <p>Tech: C#, Unity</p>
-                        <button class="btn"  onclick="window.location.href='https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714'">
+                        <button class="btn" onclick="window.open('https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714','_blank', 'noopener noreferrer')">
                             App store
                         </button>
                     </div>
@@ -160,7 +157,7 @@
                     <div class="card-item-info">
                         <h4>Dentist Homepage with Next js</h4>
                         <p>Tech: Next, CSS</p>
-                        <button class="btn"  onclick="window.location.href='https://vedumstandvard.netlify.app/'">
+                        <button class="btn" onclick="window.open('https://vedumstandvard.netlify.app/','_blank', 'noopener noreferrer')">
                             Visit
                         </button>
                     </div>
@@ -177,7 +174,7 @@
                     <div class="card-item-info">
                         <h4>Hangman with Star Wars API from swapi.dev</h4>
                         <p>Tech: React, Redux, CSS</p>
-                        <button class="btn"  onclick="window.location.href='https://thehangmanreact.netlify.app/'">
+                        <button class="btn" onclick="window.open('https://thehangmanreact.netlify.app/','_blank', 'noopener noreferrer')" >
                             Visit
                         </button>
                     </div>
@@ -209,17 +206,17 @@
     <footer class="footer">
         <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" href="mailto:enon.halilovic@gmail.com">
+                <a class="social-list__link" href="mailto:enon.halilovic@gmail.com" target="_blank" rel="noopener noreferrer">
                     <i class="fas fa-envelope footer__link"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://www.instagram.com/haldevone/">
+                <a class="social-list__link" href="https://www.instagram.com/haldevone/" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-instagram footer__link"></i>
                 </a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/haldevone">
+                <a class="social-list__link" href="https://github.com/haldevone" target="_blank" rel="noopener noreferrer">
                     <i class="fab fa-github footer__link"></i>
                 </a>
             </li>
