--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <h3 class="card-item-header">CMS Blog Site</h3>
                     <div class="card-item-info">
                         <h4>HalDevOne homepage</h4>
-                        <p>Tech: HTML, CSS, JS, PHP, MySQL</p>
+                        <p>Made with: HTML, CSS, JS, PHP, MySQL</p>
                         <button class="btn" onclick="window.open('http://haldevone.com','_blank', 'noopener noreferrer')">
                             Visit
                         </button>                        
@@ -125,7 +125,7 @@
                     <h3 class="card-item-header">Transaction App</h3>
                     <div class="card-item-info">
                         <h4>Transaction app with user login and backend firebase</h4>
-                        <p>Tech: React, CSS, D3, Firebase</p>
+                        <p>Made with: React, CSS, D3, Firebase, Typescript</p>
                     </div>
                 </figcaption>
             </figure>
@@ -139,7 +139,7 @@
                     <h3 class="card-item-header">Mobile App Game</h3>
                     <div class="card-item-info">
                         <h4>Mobile game for children. Available at Google Play & App store</h4>
-                        <p>Tech: C#, Unity</p>
+                        <p>Made with: C#, Unity</p>
                         <button class="btn" onclick="window.open('https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714','_blank', 'noopener noreferrer')">
                             App store
                         </button>
@@ -156,7 +156,7 @@
                     <h3 class="card-item-header">Client Dentist site</h3>
                     <div class="card-item-info">
                         <h4>Dentist Homepage with Next js</h4>
-                        <p>Tech: Next, CSS</p>
+                        <p>Made with: Next, CSS</p>
                         <button class="btn" onclick="window.open('https://vedumstandvard.netlify.app/','_blank', 'noopener noreferrer')">
                             Visit
                         </button>
