Card-item tweaks

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div>
                     <img src="images/project1.png" alt="" class="card-item-img"> 
                 </div>
-                <figcaption>
+                <figcaption class="fig-one">
                     <h3 class="card-item-header">CMS Blog Site</h3>
                     <div class="card-item-info">
                         <h4>HalDevOne homepage</h4>
@@ -157,9 +157,14 @@
                     <div class="card-item-info">
                         <h4>Dentist Homepage with Next js</h4>
                         <p>Made with: Next, CSS</p>
-                        <button class="btn" onclick="window.open('https://vedumstandvard.netlify.app/','_blank', 'noopener noreferrer')">
-                            Visit
-                        </button>
+                        <div class="git-btn">
+                            <button class="btn" onclick="window.open('https://vedumstandvard.netlify.app/','_blank', 'noopener noreferrer')">
+                                Visit
+                            </button>
+                            <button class="btn" onclick="window.open('https://github.com/haldevone/vedumsnext','_blank', 'noopener noreferrer')">
+                                Git  <i class="fab fa-github"></i>
+                            </button>
+                        </div>
                     </div>
                 </figcaption>
             </figure>
@@ -174,9 +179,15 @@
                     <div class="card-item-info">
                         <h4>Hangman with Star Wars API from swapi.dev</h4>
                         <p>Tech: React, Redux, CSS</p>
-                        <button class="btn" onclick="window.open('https://thehangmanreact.netlify.app/','_blank', 'noopener noreferrer')" >
-                            Visit
-                        </button>
+                        <div class="git-btn">
+                            <button class="btn" onclick="window.open('https://thehangmanreact.netlify.app/','_blank', 'noopener noreferrer')" >
+                                Visit
+                            </button>
+                            <button class="btn" onclick="window.open('https://github.com/haldevone/hangman','_blank', 'noopener noreferrer')">
+                            Git  <i class="fab fa-github"></i>
+                            </button>
+                        </div>
+                        
                     </div>
                 </figcaption>
             </figure>
@@ -194,7 +205,7 @@
             <p>
                 I’ve always been a person who has both a logical and a creative side and therefore choosing 
                 Web/Game development was a perfect match for me. I am self-taught and my passion for this 
-                industry has made it easy for me to study and learn and I always strive for updating my knowledge.
+                industry has made it easy for me to study and I always strive for updating my knowledge.
             </p>
             
         </div>
