--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Intro -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
-            Hi, I am <strong>Enon Hall</strong>
+            Hi, I am <strong>Enon H Hall</strong>
         </h1>
         <div class="section__subtitle section__subtitle--intro"> 
             <div class="banner-text-container animate rolling-letters">
@@ -82,7 +82,7 @@
                     <img src="images/gameController2.png" alt="" class="skill-img">
                     <h3 class="skill-header">Game Development</h3>
                     <h4 class="skill-subheader">My Game Tech:</h4>
-                    <p>Unity, C#</p>
+                    <p>Unity, C#, Audacity</p>
                 </div>
                 <!--/ skill -->
             </div>
@@ -126,6 +126,9 @@
                     <div class="card-item-info">
                         <h4>Transaction app with user login and backend firebase</h4>
                         <p>Made with: React, CSS, D3, Firebase, Typescript</p>
+                        <button class="btn" onclick="window.open('https://github.com/haldevone/transaction-app','_blank', 'noopener noreferrer')">
+                            Git  <i class="fab fa-github"></i>
+                        </button>
                     </div>
                 </figcaption>
             </figure>
