--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
                 <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+                <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
             </ul>
         </nav>
@@ -52,66 +52,29 @@
         </div>
     </section>
 
-    <!-- My Skill -->
-    <section class="my-skills" id="skills">
-        <h2 class="section__title section__title--skills">What I do</h2>
-
-    </section>
-    <section class="skills-container">
-        <div class="skills-wrapper">
-            <div class="skills">
-                <!--/ skill -->
-                <div class="skill">
-                    <img src="images/mobile2.png" alt="" class="skill-img">
-                    <h3 class="skill-header">Web Development</h3>
-                    <h4 class="skill-subheader">My Tech Languages:</h4>
-                    <p>Html, Css, Javascript, React</p>
-                    <p>Next, Typescript</p>
-                    <p>Github, Firebase, PHP, MySQL</p>
-                </div>
-    
-                <!--/ skill -->
-                <div class="skill">
-                    <img src="images/brush.png" alt="" class="skill-img">
-                    <h3 class="skill-header">Design</h3>
-                    <h4 class="skill-subheader">My Design Software:</h4>
-                    <p>Photoshop, Blender</p>
-                    <p>3d Coat, Substance painter</p>
-                </div>
-                <div class="skill">
-                    <img src="images/gameController2.png" alt="" class="skill-img">
-                    <h3 class="skill-header">Game Development</h3>
-                    <h4 class="skill-subheader">My Game Tech:</h4>
-                    <p>Unity, C#, Audacity</p>
-                </div>
-                <!--/ skill -->
-            </div>
-        </div>
-        <!-- <div class="work-btn">
-            <a href="#work" class="btn">My Work</a>
-        </div> -->
-
-    </section>
-
     <!-- My Work -->
-    <section class="my-work" id="work">
+    <section class="my-work-banner">
         <h2 class="section__title section__title--work">My Work</h2>
-        <p class="section__subtitle section__subtitle--work">A selection of my range of work</p>
+        <h4 class="section__title section__subtitle--work">A selection of my range of work</h4>
+    </section>
+    <div class="pointer"></div>
+    <section class="my-work" id="work">
         <div class="cards">
-
             <!-- Card Item 01 -->
             <figure class="card-item">
                 <div>
-                    <img src="images/project1.png" alt="" class="card-item-img"> 
+                    <img src="images/project6.png" alt="" class="card-item-img"> 
                 </div>
                 <figcaption class="fig-one">
-                    <h3 class="card-item-header">CMS Blog Site</h3>
+                    <h3 class="card-item-header">Spotify Playlist Manager</h3>
                     <div class="card-item-info">
-                        <h4>HalDevOne homepage</h4>
-                        <p>Made with: HTML, CSS, JS, PHP, MySQL</p>
-                        <button class="btn" onclick="window.open('http://haldevone.com','_blank', 'noopener noreferrer')">
-                            Visit
-                        </button>                        
+                        <h4>Firebase & spotify user login, Get playlist via API save to firebase and compare history tracks,
+                            followers and more.
+                        </h4>
+                        <p>Made with: React, CSS, Firebase, Spotify API</p>
+                        <button class="btn" onclick="window.open('https://github.com/haldevone/SpotifyPlaylistManager','_blank', 'noopener noreferrer')">
+                            Git  <i class="fab fa-github"></i>
+                        </button>
                     </div>
                 </figcaption>
             </figure>
@@ -124,7 +87,7 @@
                 <figcaption>
                     <h3 class="card-item-header">Transaction App</h3>
                     <div class="card-item-info">
-                        <h4>Transaction app with user login and backend firebase</h4>
+                        <h4>Transaction app with firebase. Store your shopping transactions. Get overview in D3 pie chart</h4>
                         <p>Made with: React, CSS, D3, Firebase, Typescript</p>
                         <button class="btn" onclick="window.open('https://github.com/haldevone/transaction-app','_blank', 'noopener noreferrer')">
                             Git  <i class="fab fa-github"></i>
@@ -136,16 +99,16 @@
             <!-- Card Item 03 -->
             <figure class="card-item">
                 <div>
-                    <img src="images/project2.png" alt="" class="card-item-img">
+                    <img src="images/project1.png" alt="" class="card-item-img"> 
                 </div>
-                <figcaption>
-                    <h3 class="card-item-header">Mobile App Game</h3>
+                <figcaption class="fig-one">
+                    <h3 class="card-item-header">CMS Blog Site</h3>
                     <div class="card-item-info">
-                        <h4>Mobile game for children. Available at Google Play & App store</h4>
-                        <p>Made with: C#, Unity</p>
-                        <button class="btn" onclick="window.open('https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714','_blank', 'noopener noreferrer')">
-                            App store
-                        </button>
+                        <h4>Blog site with CMS & MySQL database. </h4>
+                        <p>Made with: HTML, CSS, JS, PHP, MySQL</p>
+                        <button class="btn" onclick="window.open('http://haldevone.com','_blank', 'noopener noreferrer')">
+                            Visit
+                        </button>                        
                     </div>
                 </figcaption>
             </figure>
@@ -175,6 +138,23 @@
             <!-- Card Item 05 -->
             <figure class="card-item">
                 <div>
+                    <img src="images/project2.png" alt="" class="card-item-img">
+                </div>
+                <figcaption>
+                    <h3 class="card-item-header">Mobile App Game</h3>
+                    <div class="card-item-info">
+                        <h4>Mobile game for children. Available at Google Play & App store</h4>
+                        <p>Made with: C#, Unity</p>
+                        <button class="btn" onclick="window.open('https://apps.apple.com/us/app/panda-addie-play-learn/id1486103714','_blank', 'noopener noreferrer')">
+                            App store
+                        </button>
+                    </div>
+                </figcaption>
+            </figure>
+
+            <!-- Card Item 06 -->
+            <figure class="card-item">
+                <div>
                     <img src="images/project3.png" alt="" class="card-item-img">
                 </div>
                 <figcaption>
@@ -195,6 +175,43 @@
                 </figcaption>
             </figure>
 
+        </div>
+    </section>
+
+    <!-- My Skill -->
+    <section class="my-skills" id="skills">
+        <h2 class="section__title section__title--skills">What I do</h2>
+    </section>
+    <section class="skills-container">
+        <div class="skills-wrapper">
+            <div class="skills">
+                <!--/ skill -->
+                <div class="skill">
+                    <img src="images/mobile2.png" alt="" class="skill-img">
+                    <h3 class="skill-header">Web Development</h3>
+                    <h4 class="skill-subheader">My Tech Languages:</h4>
+                    <p>Html, Css, Javascript</p>
+                    <p>React, Typescript</p>
+                    <p>Github, Firebase, MySQL</p>
+                </div>
+    
+                <!--/ skill -->
+                <div class="skill">
+                    <img src="images/brush.png" alt="" class="skill-img">
+                    <h3 class="skill-header">Design</h3>
+                    <h4 class="skill-subheader">My Design Software:</h4>
+                    <p>Photoshop, Blender</p>
+                    <p>3d Coat, Substance painter</p>
+                </div>
+                <div class="skill">
+                    <img src="images/gameController2.png" alt="" class="skill-img">
+                    <h3 class="skill-header">Game Development</h3>
+                    <h4 class="skill-subheader">My Game Tech:</h4>
+                    <p>Unity</p>
+                    <p>C#</p>
+                </div>
+                <!--/ skill -->
+            </div>
         </div>
     </section>
 
