--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <h3 class="skill-header">Web Development</h3>
                     <h4 class="skill-subheader">My Tech Languages:</h4>
                     <p>Html, Css, Javascript</p>
-                    <p>React, Typescript</p>
+                    <p>React, Sass</p>
                     <p>Github, Firebase, MySQL</p>
                 </div>
     
