--- a/index.html
+++ b/index.html
@@ -82,6 +82,27 @@
             <!-- Card Item 02 -->
             <figure class="card-item">
                 <div>
+                    <img src="images/project7.png" alt="" class="card-item-img">
+                </div>
+                <figcaption>
+                    <h3 class="card-item-header">Food App</h3>
+                    <div class="card-item-info">
+                        <h4>Simple e-commerce Front End only Example Site.</h4>
+                        <p>Made with: React, SASS</p>
+                        <div class="git-btn">
+                            <button class="btn" onclick="window.open('https://github.com/haldevone/foodApp','_blank', 'noopener noreferrer')">
+                                Git  <i class="fab fa-github"></i>
+                            </button>
+                            <button class="btn" onclick="window.open('https://haldevsfood.netlify.app/', 'noopener noreferrer')">
+                                Visit
+                            </button>
+                        </div> 
+                    </div>
+                </figcaption>
+            </figure>
+            <!-- Card Item 03 -->
+            <figure class="card-item">
+                <div>
                     <img src="images/project5.png" alt="" class="card-item-img">
                 </div>
                 <figcaption>
@@ -96,7 +117,7 @@
                 </figcaption>
             </figure>
 
-            <!-- Card Item 03 -->
+            <!-- Card Item 04 -->
             <figure class="card-item">
                 <div>
                     <img src="images/project1.png" alt="" class="card-item-img"> 
@@ -113,7 +134,7 @@
                 </figcaption>
             </figure>
 
-             <!-- Card Item 04 -->
+             <!-- Card Item 05 -->
              <figure class="card-item">
                 <div>
                     <img src="images/project4.png" alt="" class="card-item-img">
@@ -135,7 +156,7 @@
                 </figcaption>
             </figure>
 
-            <!-- Card Item 05 -->
+            <!-- Card Item 06 -->
             <figure class="card-item">
                 <div>
                     <img src="images/project2.png" alt="" class="card-item-img">
@@ -152,7 +173,7 @@
                 </figcaption>
             </figure>
 
-            <!-- Card Item 06 -->
+            <!-- Card Item 07 -->
             <figure class="card-item">
                 <div>
                     <img src="images/project3.png" alt="" class="card-item-img">
@@ -194,7 +215,7 @@
                     <p>React, Sass</p>
                     <p>Github, Firebase, MySQL</p>
                 </div>
-    
+                
                 <!--/ skill -->
                 <div class="skill">
                     <img src="images/brush.png" alt="" class="skill-img">
