--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
         </button>
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-                <li class="nav__item"><a href="#skills" class="nav__link">My Skills</a></li>
-                <li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+                <li class="nav__item">
+                    <a href="#home" class="nav__link">Home</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#work" class="nav__link">My Work</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#skills" class="nav__link">My Skills</a>
+                </li>
+                <li class="nav__item">
+                    <a href="#about" class="nav__link">About Me</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -47,8 +55,8 @@
             <img class="banner" src="images/banner.png" alt="">
         </div>
         <div class="intro-round">
-            <img src="images/profile.png" onmouseover="this.src='images/profileCartoon.png'"
-            onmouseout="this.src='images/profile.png'" alt="picture of Enon" class="intro__img">
+            <img src="images/profileCartoon.png" onmouseover="this.src='images/profile.png'"
+            onmouseout="this.src='images/profileCartoon.png'" alt="picture of Enon" class="intro__img">
         </div>
     </section>
 
@@ -108,7 +116,7 @@
                 <figcaption>
                     <h3 class="card-item-header">Transaction App</h3>
                     <div class="card-item-info">
-                        <h4>Transaction app with firebase. Store your shopping transactions. Get overview in D3 pie chart</h4>
+                        <h4>Transaction app with firebase.User login, store your shopping transactions. Get overview in D3 pie chart</h4>
                         <p>Made with: React, CSS, D3, Firebase, Typescript</p>
                         <button class="btn" onclick="window.open('https://github.com/haldevone/transaction-app','_blank', 'noopener noreferrer')">
                             Git  <i class="fab fa-github"></i>
