--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/aa712958c8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400&family=Source+Code+Pro:wght@400;900&family=Source+Sans+Pro
-    :wght@300;900&family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    :wght@300;900&family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -76,8 +76,8 @@
                 <figcaption class="fig-one">
                     <h3 class="card-item-header">Spotify Playlist Manager</h3>
                     <div class="card-item-info">
-                        <h4>Firebase & spotify user login, Get playlist via API save to firebase and compare history tracks,
-                            followers and more.
+                        <h4>Using Firebase & Spotify API. CMS app for managing spotify tracks, saving to DB, 
+                            comparing history.
                         </h4>
                         <p>Made with: React, CSS, Firebase, Spotify API</p>
                         <button class="btn" onclick="window.open('https://github.com/haldevone/SpotifyPlaylistManager','_blank', 'noopener noreferrer')">
