--- a/index.html
+++ b/index.html
@@ -15,50 +15,55 @@
 
 <body>
     <header>
-        <div class="logo">
-            <!-- <img src="images/pandaLogo.png" alt=""> -->
-        </div>
-        <button class="nav-toggle" aria-label="toogle navigation">
-            <span class="hamburger"></span>
-        </button>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="#home" class="nav__link">Home</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#work" class="nav__link">My Work</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#skills" class="nav__link">My Skills</a>
-                </li>
-                <li class="nav__item">
-                    <a href="#about" class="nav__link">About Me</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-
-    <!-- Intro -->
-    <section class="intro" id="home">
-        <h1 class="section__title section__title--intro">
-            Hi, I am <strong>Enon H Hall</strong>
-        </h1>
-        <div class="section__subtitle section__subtitle--intro"> 
-            <div class="banner-text-container animate rolling-letters">
-                <span>a </span>
-			    <span>w</span><span>e</span><span>b </span>
-                <span> & </span>
-                <span>g</span><span>a</span><span>m</span><span>e </span>
-                <span>d</span><span>e</span><span>v</span>
+        <div class="nav-top">
+            <div class="logo">
+                <!-- <img src="images/pandaLogo.png" alt=""> -->
             </div>
-            <img class="banner" src="images/banner.png" alt="">
+            <button class="nav-toggle" aria-label="toogle navigation">
+                <span class="hamburger"></span>
+            </button>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#home" class="nav__link">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#work" class="nav__link">My Work</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#skills" class="nav__link">My Skills</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#about" class="nav__link">About Me</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <div class="intro-round">
-            <img src="images/profileCartoon.png" onmouseover="this.src='images/profile.png'"
-            onmouseout="this.src='images/profileCartoon.png'" alt="picture of Enon" class="intro__img">
+        <div class="circles-main">
+            <div class="circles-child"></div>
         </div>
-    </section>
+
+            <!-- Intro -->
+        <div class="intro" id="home">
+            <h1 class="section__title section__title--intro">
+                Hi, I am <strong>Enon H Hall</strong>
+            </h1>
+            <div class="section__subtitle section__subtitle--intro"> 
+                <div class="banner-text-container animate rolling-letters">
+                    <span>a </span>
+                    <span>w</span><span>e</span><span>b </span>
+                    <span> & </span>
+                    <span>g</span><span>a</span><span>m</span><span>e </span>
+                    <span>d</span><span>e</span><span>v</span>
+                </div>
+                <img class="banner" src="images/banner.png" alt="">
+            </div>
+            <div class="intro-round">
+                <img src="images/profileCartoon.png" onmouseover="this.src='images/profile.png'"
+                onmouseout="this.src='images/profileCartoon.png'" alt="picture of Enon" class="intro__img">
+            </div>
+        </div>
+    </header>
 
     <!-- My Work -->
     <section class="my-work-banner">
