--- a/index.html
+++ b/index.html
@@ -66,11 +66,17 @@
     </header>
 
     <!-- My Work -->
-    <section class="my-work-banner">
-        <h2 class="section__title section__title--work">My Work</h2>
-        <h4 class="section__title section__subtitle--work">A selection of my range of work</h4>
+    <section class="flex">
+        <div class="pointer-anim">
+            <div class="my-work-banner">
+                <h2 class="section__title section__title--work">My Work</h2>
+                <h4 class="section__title section__subtitle--work">A selection of my range of work</h4>           
+            </div>
+            <div class="pointer"></div>
+        </div>
+        
     </section>
-    <div class="pointer"></div>
+
     <section class="my-work" id="work">
         <div class="cards">
             <!-- Card Item 01 -->
