--- a/index.html
+++ b/index.html
@@ -100,12 +100,33 @@
                     <!-- Card Item 02 -->
                     <figure class="card-item">
                         <div>
+                            <img src="images/project8.png" alt="Leo-doula project" class="card-item-img">
+                        </div>
+                        <figcaption>
+                            <h3 class="card-item-header">Client Site</h3>
+                            <div class="card-item-info">
+                                <h4>Custom designed landing page</h4>
+                                <p>Made with: js, SASS, Photoshop</p>
+                                <div class="git-btn">
+                                    <button class="btn" onclick="window.open('https://github.com/haldevone/leodoula','_blank', 'noopener noreferrer')">
+                                        Git  <i class="fab fa-github"></i>
+                                    </button>
+                                    <button class="btn" onclick="window.open('https://leodoula.netlify.app/', 'noopener noreferrer')">
+                                        Visit
+                                    </button>
+                                </div> 
+                            </div>
+                        </figcaption>
+                    </figure>
+                    <!-- Card Item 03 -->
+                    <figure class="card-item">
+                        <div>
                             <img src="images/project7.png" alt="Food app example" class="card-item-img">
                         </div>
                         <figcaption>
                             <h3 class="card-item-header">Food App</h3>
                             <div class="card-item-info">
-                                <h4>Simple e-commerce Front End only Example Site.</h4>
+                                <h4>Simple e-commerce SPA</h4>
                                 <p>Made with: React, SASS</p>
                                 <div class="git-btn">
                                     <button class="btn" onclick="window.open('https://github.com/haldevone/foodApp','_blank', 'noopener noreferrer')">
@@ -118,7 +139,7 @@
                             </div>
                         </figcaption>
                     </figure>
-                    <!-- Card Item 03 -->
+                    <!-- Card Item 04 -->
                     <figure class="card-item">
                         <div>
                             <img src="images/project5.png" alt="Transaction App" class="card-item-img">
@@ -135,7 +156,7 @@
                         </figcaption>
                     </figure>
 
-                    <!-- Card Item 04 -->
+                    <!-- Card Item 05 -->
                     <figure class="card-item">
                         <div>
                             <img src="images/project1.png" alt="haldevone website" class="card-item-img"> 
@@ -152,7 +173,7 @@
                         </figcaption>
                     </figure>
 
-                    <!-- Card Item 05 -->
+                    <!-- Card Item 06 -->
                     <figure class="card-item">
                         <div>
                             <img src="images/project4.png" alt="Dentist site" class="card-item-img">
@@ -174,7 +195,7 @@
                         </figcaption>
                     </figure>
 
-                    <!-- Card Item 06 -->
+                    <!-- Card Item 07 -->
                     <figure class="card-item">
                         <div>
                             <img src="images/project2.png" alt="Panda addie mobile app" class="card-item-img">
@@ -191,7 +212,7 @@
                         </figcaption>
                     </figure>
 
-                    <!-- Card Item 07 -->
+                    <!-- Card Item 08 -->
                     <figure class="card-item">
                         <div>
                             <img src="images/project3.png" alt="Hangman starwars" class="card-item-img">
@@ -209,7 +230,6 @@
                                     Git  <i class="fab fa-github"></i>
                                     </button>
                                 </div>
-                                
                             </div>
                         </figcaption>
                     </figure>
