--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
                                 <img src="images/mobile2.png" alt="mobile logo" class="skill-img">
                             </figure>
                             <h3 class="skill-header">Web Development</h3>
-                            <h4 class="skill-subheader">My Tech Languages:</h4>
+                            <h4 class="skill-subheader">My Web Tech Languages:</h4>
                             <p>Html, Css, Javascript</p>
                             <p>React, Sass</p>
-                            <p>Github, Firebase, MySQL</p>
+                            <p>Github, Firebase, MongoDB</p>
                         </div>
                         
                         <!--/ skill -->
