--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h3 class="card-item-header">Client Site</h3>
                             <div class="card-item-info">
                                 <h4>Custom designed landing page</h4>
-                                <p>Made with: js, SASS, Photoshop</p>
+                                <p>Made with: JS, SASS, Photoshop</p>
                                 <div class="git-btn">
                                     <button class="btn" onclick="window.open('https://github.com/haldevone/leodoula','_blank', 'noopener noreferrer')">
                                         Git  <i class="fab fa-github"></i>
@@ -140,7 +140,7 @@
                         </figcaption>
                     </figure>
                     <!-- Card Item 04 -->
-                    <figure class="card-item">
+                    <!-- <figure class="card-item">
                         <div>
                             <img src="images/project5.png" alt="Transaction App" class="card-item-img">
                         </div>
@@ -154,7 +154,7 @@
                                 </button>
                             </div>
                         </figcaption>
-                    </figure>
+                    </figure> -->
 
                     <!-- Card Item 05 -->
                     <figure class="card-item">
