Added project back

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <figcaption>
                             <h3 class="card-item-header">Food App</h3>
                             <div class="card-item-info">
-                                <h4>Simple e-commerce SPA</h4>
+                                <h4>E-commerce SPA Front end only</h4>
                                 <p>Made with: React, SASS</p>
                                 <div class="git-btn">
                                     <button class="btn" onclick="window.open('https://github.com/haldevone/foodApp','_blank', 'noopener noreferrer')">
@@ -140,7 +140,7 @@
                         </figcaption>
                     </figure>
                     <!-- Card Item 04 -->
-                    <!-- <figure class="card-item">
+                    <figure class="card-item">
                         <div>
                             <img src="images/project5.png" alt="Transaction App" class="card-item-img">
                         </div>
@@ -154,7 +154,7 @@
                                 </button>
                             </div>
                         </figcaption>
-                    </figure> -->
+                    </figure>
 
                     <!-- Card Item 05 -->
                     <figure class="card-item">
