--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <figcaption class="fig-one">
                             <h3 class="card-item-header">CMS & Blog Site</h3>
                             <div class="card-item-info">
-                                <h4>Haldevone site with Blog & own CMS, MySQL database.</h4>
+                                <h4>Haldevone site with Blog & CMS, MySQL database.</h4>
                                 <p>Made with: HTML, CSS, JS, PHP, MySQL</p>
                                 <button class="btn" onclick="window.open('http://haldevone.com','_blank', 'noopener noreferrer')">
                                     Visit
