--- a/index.html
+++ b/index.html
@@ -100,26 +100,18 @@
                     <!-- Card Item 02 -->
                     <figure class="card-item">
                         <div>
-                            <img src="images/project8.png" alt="Leo-doula project" class="card-item-img">
+                            <img src="images/project9.png" alt="elearning platform" class="card-item-img">
                         </div>
                         <figcaption>
-                            <h3 class="card-item-header">Client Site</h3>
+                            <h3 class="card-item-header">eLearning Platform</h3>
                             <div class="card-item-info">
-                                <h4>Custom designed landing page</h4>
-                                <p>Made with: JS, SASS, Photoshop</p>
-                                <div class="git-btn">
-                                    <button class="btn" onclick="window.open('https://github.com/haldevone/leodoula','_blank', 'noopener noreferrer')">
-                                        Git  <i class="fab fa-github"></i>
-                                    </button>
-                                    <button class="btn" onclick="window.open('https://leodoula.netlify.app/', 'noopener noreferrer')">
-                                        Visit
-                                    </button>
-                                </div> 
+                                <h4>Online course provider</h4>
+                                <p>Made with: MERN stack, Mongo Database, Google drive Database for media, Node & express backend, React Front</p>
                             </div>
                         </figcaption>
                     </figure>
                     <!-- Card Item 03 -->
-                    <figure class="card-item">
+                    <!-- <figure class="card-item">
                         <div>
                             <img src="images/project7.png" alt="Food app example" class="card-item-img">
                         </div>
@@ -138,20 +130,25 @@
                                 </div> 
                             </div>
                         </figcaption>
-                    </figure>
+                    </figure> -->
                     <!-- Card Item 04 -->
                     <figure class="card-item">
                         <div>
-                            <img src="images/project5.png" alt="Transaction App" class="card-item-img">
+                            <img src="images/project8.png" alt="Leo-doula project" class="card-item-img">
                         </div>
                         <figcaption>
-                            <h3 class="card-item-header">Transaction App</h3>
+                            <h3 class="card-item-header">Client Site</h3>
                             <div class="card-item-info">
-                                <h4>Transaction app. User auth and database with firebase. Get overview in D3 pie chart</h4>
-                                <p>Made with: React, CSS, D3, Firebase, Typescript</p>
-                                <button class="btn" onclick="window.open('https://github.com/haldevone/transaction-app','_blank', 'noopener noreferrer')">
-                                    Git  <i class="fab fa-github"></i>
-                                </button>
+                                <h4>Custom designed landing page</h4>
+                                <p>Made with: JS, SASS, Photoshop</p>
+                                <div class="git-btn">
+                                    <button class="btn" onclick="window.open('https://github.com/haldevone/leodoula','_blank', 'noopener noreferrer')">
+                                        Git  <i class="fab fa-github"></i>
+                                    </button>
+                                    <button class="btn" onclick="window.open('https://leodoula.netlify.app/', 'noopener noreferrer')">
+                                        Visit
+                                    </button>
+                                </div> 
                             </div>
                         </figcaption>
                     </figure>
@@ -263,8 +260,8 @@
                             </figure>
                             <h3 class="skill-header">Design</h3>
                             <h4 class="skill-subheader">My Design Software:</h4>
-                            <p>Photoshop, Blender</p>
-                            <p>3d Coat, Substance painter</p>
+                            <p>Photoshop, Illustrator</p>
+                            <p>3d Coat, Blender</p>
                         </div>
                         <div class="skill">
                             <figure>
