--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </h3>
                     <p>
                         I’ve always been a person who has both a logical and a creative side and therefore choosing 
-                        Web/Game development was a perfect match for me. I am self-taught and my passion for this 
+                        coding along with design was a perfect match for me. I am self-taught and my passion for this 
                         industry has made it easy for me to study and I always strive for updating my knowledge.
                     </p>
                     
