--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <h3 class="card-item-header">eLearning Platform</h3>
                             <div class="card-item-info">
                                 <h4>Online course provider</h4>
-                                <p>Made with: MERN stack, Mongo Database, Google drive Database for media, Node & express backend, React Front</p>
+                                <p>Made with: MERN stack, Mongo Database, AWS S3 Database for media, Node & express backend, Next.js React Front</p>
                             </div>
                         </figcaption>
                     </figure>
